# pipeline-eds

./: .coverage  .gitignore  Dockerfile.dev  README.md  build_executable.py  build_executable_classic.py  build_pyz.py  build_pyz_basic.py  dead.txt  eds.wsdl  main.bat  package.py  pyproject.toml  requirements.txt  version.rc.template
.github/workflows/: ci.yml  docker.yml  publish.yml  test.yml
data/: telemetry_log.jsonl
docs/: CHANGELOG.md  SIGNALR.md
scripts/: get_wsdl.py
src/coffeeplot/: atomic_telemetry.py  plot_boundary.py  plot_buffer.py
src/pipeline_eds/: __init__.py  __main__.py  _version.py  api_logger.py  atomic_telemetry.py  boundary.py  buffer.py  calls.py  chatter.py  cli.py  config_load.py  config_via_web.py  consolidated_starlette_routes.py  context.py  data_store.py  decorators.py  env.py  gui_litestar_msgspec_plotly.py  gui_mpl_live.py  gui_plotly_static.py  gui_starlette_msgspec_plotly.py  guiconfig.py  helpers.py  logging_setup.py  plotbuffer.py  plotly_casting.py  plottools.py  queriesmanager.py  return_capture.py  security_and_config.py  servedirs.py  state_manager.py  termux_setup.py  time_manager.py  version_info.py  windows_setup.py  workspace_manager.py  xlsx_export.py
src/pipeline_eds/api/: __init__.py  mission.py  mission_opcua.py  rjn.py
src/pipeline_eds/api/eds/: __init__.py  config.py  core.py  database.py  exceptions.py  imports_historic.py  security.py
src/pipeline_eds/api/eds/mock/: build_eds_dir.sh  by_grok_edited_clay.md  client.py  docs.md  hold__init__.py  refactor_20November2025.md
src/pipeline_eds/api/eds/rest/: client.py  config.py  demo.py  graphics.py
src/pipeline_eds/api/eds/soap/: __init__.py  client.py  config.py  demo.py
src/pipeline_eds/interface/: cli_eds.py  cli_mission.py  cli_rjn.py  cli_transmit.py
src/pipeline_eds/interface/web_gui/: server.py
src/pipeline_eds/interface/web_gui/templates/: eds_trend.html
src/pipeline_eds/server/: json.py  trend_server_eds.py  web_utils.py
workspaces/.mulch/: mulch.toml
workspaces/eds_to_rjn/code/: aggregator.py  collector.py
workspaces/eds_to_rjn/scripts/: daemon_runner.py
